# relayGUI

./: index.html  main.py  main2.py  pyproject.toml
templates/: add_pin.html  index.html  main.html
