[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gpio-control"
version = "0.1.0"
description = "GPIO Control Application"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
